'GUEST' changed to 'AWAY'

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <button id="new-game" onclick="newGame()">New Game</button>
             </div>
             <div class="column">
-                <h3>GUEST</h3>
+                <h3>AWAY</h3>
                 <h1 id="guest-score">0</h1>
                 <button id="guest-score-btn-1" onclick="onePointGuest()">+1</button>
                 <button id="guest-score-btn-2" onclick="twoPointsGuest()">+2</button>
